style.css
/*-------- GLOBAL STYLES ---------*/
* {
    box-sizing: border-box;
}

html {
    font-size: 70%;
    background-color: #a9abb3;
}

body {
    margin: 0;
    font-family: 'Ubuntu', sans-serif;
    text-align: center;
}

h2 {
    font-size: 4rem;
    margin-bottom: 4rem;
    text-align: center;
    color: #1b1f3b;
}

section {
    padding: 20%;
}

/* HEADER */
.navbar {
    display: flex;
    justify-content: space-between;
    padding: 1rem 2rem;
}

.logo {
    margin: auto 0;
}

nav {
    display: block;
}

#nav-items {
    display: none;
}

.show-items {
    display: block !important;
    flex-direction: column;
    align-items: flex-end;
}

#nav-items ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#nav-items a {
    text-decoration: none;
    color: black;
    font-weight: 500;
    padding: 1rem 1.5rem;
    display: block;
    font-size: x-large;
}

.toggle {
    cursor: pointer;
    font-size: 2.4rem;
    margin: auto 0 auto auto;
}
/* HERO SECTION */
.hero {
    background: url('images/hero-background.jpg') center center/cover no-repeat;
    color: #f8f9fa;
    padding: 2rem 1rem;
    opacity: 0.8;
}

.hero-content {
    padding: 24px;
}

.hero-content h1 {
    font-size: 2.4rem;
    margin-bottom: 1rem;
}

.hero-content p {
    font-size: 1.6rem;
    line-height: 1.8;
}

/* SERVICES SECTION */
.services {
    padding: 2rem 1rem;
    background-color: #f8f9fa;
}

.services-content {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.service-card {
    background-color: #ffffff;
    border-radius: 1rem;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    padding: 2rem;
    text-align: left;
}

.service-card h3 {
    font-size: 2rem;
    color: #1b1f3b;
    margin-bottom: 1rem;
}

.service-card p {
    font-size: 1.6rem;
    line-height: 1.5;
    color: #313030;
    margin-bottom: 1.5rem;
}

.service-card ul {
    list-style-type: circle;
    margin: 1rem 0 2rem 2rem;
    color: #5a5959;
}

.service-card a {
    text-decoration: none;
    font-size: 1.6rem;
    color: #d4af37;
    font-weight: 500;
    transition: color 0.3s;
}

/* ABOUT SECTION */
.about {
    padding: 2rem 1rem;
    background-color: #a9abb3;
}

.about-content {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    flex-direction: row-reverse;
    justify-content: space-evenly;
}

.about img, .call-to-action-left img {
    width: 100%;
    max-width: 60rem;
    margin-bottom: 2rem;
    display: block;
    background-color: #1b1f3b;
    border-radius: 3rem;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.about p {
    font-size: xx-large;
    line-height: 1.5;
    color: #3e3d3d;
    margin-bottom: 2rem;
}

.about a {
    display: inline-block;
    text-decoration: none;
    font-size: 1.6rem;
    color: #d4af37;
    font-weight: 500;
    border: 0.2rem solid #d4af37;
    padding: 1rem 2rem;
    border-radius: 0.5rem;
    background: grey;
}

/* CALL-TO-ACTION SECTION */
.call-to-action {
    padding: 3rem 1rem;
    text-align: center;
    background-color: white;
}

.call-to-action-right {
    width: 100%;
    margin-bottom: 5%;
}

.call-to-action span {
    display: inline-block;
    font-size: xx-large;
    color: #1b1f3b;
    margin-top: 2rem;
}

video {
    display: none;
}

/* FORM */
.call-to-action form {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* This selector targets all the input, textarea, and button elements inside a form that is inside an element with the class call-to-action */
.call-to-action form input,
.call-to-action form textarea,
.call-to-action form button {
    width: 80%;
    margin-bottom: 1.5rem;
    padding: 1rem;
    border-radius: 1rem;
    font-size: 2rem;
    border: 0.2rem solid #d4af37;
}

/* input::placeholder and textarea::placeholder: these selectors target the placeholder text inside the input and textarea elements */
.call-to-action form input::placeholder,
.call-to-action form textarea::placeholder {
    color: #515151;
}

.call-to-action form button {
    background-color: #d4af37;
    color: #1b1f3b;
    border: none;
    cursor: pointer;
    font-weight: 500;
    transition: background-color 0.3s, color 0.3s;
}

/* FOOTER */
.footer-top {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-top: 2%;
}

.social-media {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 100%;
}

.social-media a {
    color: #2c3e50;
    margin: auto;
    font-size: x-large;
    text-decoration: none;
}

.contact-info {
    margin: auto 0;
    font-size: x-large;
}

.map {
    width: 100%;
}

/* services.html page Styling*/
/* CLIENT TESTIMONIALS */
.testimonials {
    background-color: white;
    padding: 4rem 2rem;
    text-align: center;
}

.testimonials-content {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: center;
}

blockquote {
    background-color: #ffffff;
    border-left: 5px solid goldenrod;
    padding: 2rem;
    max-width: 500px;
    font-size: 1.6rem;
    font-style: italic;
    color: #555;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 0.5rem;
}

blockquote p {
    display: block;
    margin-top: 1rem;
    font-size: 1.4rem;
    font-style: normal;
    color: #2c3e50;
}

/* about.html page Styling*/
/*TEAM SECTION*/
.team {
    padding: 4rem 2rem;
    text-align: center;
    background-color: #f5f5f5;
}

.team-table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 2rem;
}

.team-table th, .team-table td {
    padding: 1rem;
    text-align: left;
    border-bottom: 1px solid #ddd;
}

.team-table th {
    font-size: 1.8rem;
    color: white;
    background-color: black;
}

.team-table td {
    font-size: 1.6rem;
    color: #555;
}

.image {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    object-fit: cover;
    margin-right: 1rem;
}

/* MEDIA QUERY FOR LARGE DEVICES */
@media (min-width: 1200px) {

    nav {
        display: flex;
    }

    /* HEADER */
    #nav-items {
        margin-left: auto;
        display: flex !important;
    }

    #nav-items ul {
        display: flex;
        list-style: none;
        margin: 15px;
        text-align: center;
        flex-direction: row;
        font-size: 2rem;
        margin: 12px 24px 12px 12px;
    }

    #nav-items li {
        margin: inherit;
    }

    .toggle {
        display: none;
    }

    /* HERO SECTION */
    .hero {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 4rem;
        height: 90vh;
    }

    .hero .hero-content {
        max-width: 50%;
    }

    .hero h1 {
        font-size: 4rem;
        margin: auto;
    }

    .hero p {
        font-size: 1.8rem;
        margin: 5% auto;
    }

    /* SERVICES SECTION */
    .services-content {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;
    }

    .services .service-card {
        margin: 1rem;
        padding: 4rem;
        height: 250px;
    }

    .right-content {
        width: 30%;
    }

    .call-to-action-right {
        width: 50%;
    }

    .video {
        display: flex;
        max-width: 650px;
        border-radius: 2rem;
        margin-right: 5rem;
    }

    /* FOOTER */

    .social-media {
        width: 33%;
    }

    .map {
        width: 33%;
    }

    /* TESTIMONIALS */
    .testimonials-content {
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
    }

    blockquote {
        max-width: 400px;
        margin: 0 1rem;
    }

    /* TEAM SECTION */
    .team-table th, .team-table td {
        font-size: 1.4rem;
        padding: 0.8rem;
    }

    .image {
        width: 120px;
        height: 120px;
    }

    .team-table {
        display: block;
        overflow-x: auto;
        white-space: nowrap;
    }
}

